test/bad/automatic/base/compile_time/0054.lat
int self() {
  return 2;
}

int main() {
  return self();
}
